classDiagram
    %% --- Auth Store ---
    class AuthUser {
        +string id
        +string email
        +string fullName
        +string role
    }

    class AuthState {
        +AuthUser | null user
        +string | null accessToken
        +string | null refreshToken
        +setAuth(user, accessToken, refreshToken) void
        +setAccessToken(accessToken) void
        +setTokens(accessToken, refreshToken) void
        +clearAuth() void
    }

    class useAuthStore {
        <<Zustand Store>>
    }

    AuthState "1" *-- "1" AuthUser : contains
    useAuthStore ..|> AuthState : implements

    %% --- Camera Instance Store ---
    class CameraStoreState {
        +string[] cameraIds
        +Record~string, CameraInstance~ cameraInstances
        +boolean isDirty
        +Date | null lastSavedAt
        +Set~string~ createdIds
        +Set~string~ updatedIds
        +Set~string~ deletedIds
        +Set~string~ failedCameraIds
        +addCamera(camera) void
        +updateCamera(id, patch) void
        +removeCamera(id) void
        +hydrateCameras(cameras) void
        +mergeHydrate(fetchedCameras) void
        +markCameraSynced(id, canonical) void
        +replaceTempId(tempId, serverId, serverCamera) void
        +markCameraFailed(tempId) void
        +markSaved() void
        +clearChanges() void
    }

    class useCameraInstanceStore {
        <<Zustand Store>>
    }

    useCameraInstanceStore ..|> CameraStoreState : implements

    %% --- Camera Layer Store ---
    class CameraLayerState {
        +string | null selectedCameraId
        +string | null selectedModelId
        +selectCamera(id, zoomLevel) void
        +clearSelection() void
        +setSelectedModel(id) void

    }

    class useCameraLayerStore {
        <<Zustand Store>>
    }

    useCameraLayerStore ..|> CameraLayerState : implements

    %% --- Map View Store ---
    class MapViewState {
        +LeafletMap | null leafletMap
        +string activeTool
        +boolean showFovPolygons
        +boolean showZonePolygons
        +string basemapStyle
        +setLeafletMap(map) void
        +setActiveTool(tool) void
        +setShowFovPolygons(show) void
        +setShowZonePolygons(show) void
        +setBasemapStyle(style) void
    }

    class useMapViewStore {
        <<Zustand Store>>
    }

    useMapViewStore ..|> MapViewState : implements

    %% --- Project Store ---
    class ProjectSlice {
        +string filterType
        +string sortBy
        +string searchQuery
        +setFilterType(filterType) void
        +setSortBy(sortBy) void
        +setSearchQuery(searchQuery) void
    }

    class useProjectStore {
        <<Zustand Store>>
    }

    useProjectStore ..|> ProjectSlice : implements

    %% --- Cross-Store Dependencies ---
    useCameraLayerStore ..> useMapViewStore : reads/updates state
